brat/test/golden/error/badvec2.brat
v3 :: Vec(Int,3)
v3 = nil
